tests/negative/alias_missing_method.lu
require "godot"

class AliasTarget
  alias greet missing_method
end

class Main < Node
  def ready: void
    target: AliasTarget = AliasTarget.new
  end
end
